[tool.poetry]
name = "routing-simulator"
version = "0.1.0"
description = ""
authors = ["Igor Grigorev barsic1080@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "*"
pandas = "^1.3.1"
plotly = "*"
scipy = "*"
matplotlib = "*"
stqdm = "^0.0.4"
seaborn = "^0.11.1"
joypy = "^0.2.5"
spectra = "^0.0.11"
bokeh = "^2.4.1"
streamlit = "^1.3.1"

[tool.poetry.dev-dependencies]
tqdm = "^4.62.1"
jupyterlab = "^3.1.2"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
pylint = "^2.9.6"
autopep8 = "^1.5.7"
black = "^21.7b0"
celluloid = "^0.2.0"
ffmpeg-python = "^0.2.0"
ipywidgets = "^7.6.3"
mpl-interactions = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
